--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,3 +25,5 @@ flutter:
           weight: 600
         - asset: assets/fonts/Fredoka-Bold.ttf
           weight: 700
+  assets:
+    - assets/images/logo.png
